2021-02-28  Bruno Haible  <bruno@clisp.org>

	Update DEPENDENCIES.
	* DEPENDENCIES: List the normal dependencies of a package with an
	Autoconf-generated configure file. Update info regarding libiconv.

2021-01-31  Bruno Haible  <bruno@clisp.org>

	Switch to autoconf-2.71.
	* autogen.sh: Update comments.

2020-12-09  Bruno Haible  <bruno@clisp.org>

	Allow use of autoconf-2.70.
	* autogen.sh: Update comments.

2020-11-21  Bruno Haible  <bruno@clisp.org>

	build: Fix export of symbols in 64-bit mode on Windows.
	Reported by kenjiuno <h8mastre@gmail.com> in
	<https://savannah.gnu.org/bugs/?59491>.
	* woe32dll/export.h (IMP): Correct definition in 64-bit mode.

2020-09-06  Bruno Haible  <bruno@clisp.org>

	build: Add support for clang on Windows.
	* m4/woe32-dll.m4 (gl_WOE32_DLL): Set gl_cv_ld_autoimport to 'no' on
	MSVC and MSVC/clang.

2020-08-30  Bruno Haible  <bruno@clisp.org>

	build: Update after gnulib changed.
	* configure.ac (AC_PREREQ): Bump minimum Autoconf version to 2.64.

2020-05-07  Daiki Ueno  <ueno@gnu.org>

	build: Update after gnulib changed
	In the latest Gnulib, the definition of _GL_UNUSED_PARAMETER is
	expanded at configure time of the consumer project.  Let's include
	only the fallback definition in <unistring/cdefs.h>.
	Suggested by Dmitry Baryshkov <dbaryshkov@gmail.com> in:
	<https://lists.gnu.org/archive/html/bug-libunistring/2020-05/msg00001.html>.
	* lib/Makefile.am (unistring/cdefs.h): Don't generate the file.
	* lib/unistring/cdefs.h: Include the expanded form instead of ...
	* lib/unistring/cdefs.in.h: ... this.
	* gnulib-m4/.gitignore, gnulib-m4/gnulib-cache.m4, lib/.gitignore,
	tests/.gitignore: Updated.

2019-12-23  Bruno Haible  <bruno@clisp.org>

	doc: Update description of locale_charset.
	* doc/uniconv.texi (uniconv.h): Fix reference to config.charset, which
	was removed on 2018-05-19.

2019-12-22  Bruno Haible  <bruno@clisp.org>

	build: Don't erase the .sym file if 'sed' is not GNU sed.